--- a/_data/honors.yml
+++ b/_data/honors.yml
@@ -1,13 +1,13 @@
 - honor:
-  name: <a href="http://cst.whut.edu.cn/xsgz/xggg/201704/t20170419_263333.htm">武汉理工大学优秀本科毕业生</a>
+  name: 武汉理工大学优秀本科毕业生
   time: 2017.04
 
 - honor:
-  name: <a href="http://cst.whut.edu.cn/xsgz/xggg/201610/t20161027_243245.htm">国家奖学金</a>（排名：1th/203）
+  name: 国家奖学金（排名：1th/203）
   time: 2016.11
 
 - honor:
-  name: 校一等奖学金、<a href="http://cst.whut.edu.cn/xsgz/xggg/201610/t20161027_243245.htm">校优秀学生干部-标兵级</a>（排名：1th/203）
+  name: 校一等奖学金、校优秀学生干部-标兵级（排名：1th/203）
   time: 2016.11
 
 - honor:
