--- a/_data/honors.yml
+++ b/_data/honors.yml
@@ -3,11 +3,11 @@
   time: 2017.04
 
 - honor:
-  name: 国家奖学金（排名：1th/203）
+  name: 国家奖学金（排名：1st/203）
   time: 2016.11
 
 - honor:
-  name: 校一等奖学金、校优秀学生干部-标兵级（排名：1th/203）
+  name: 校一等奖学金、校优秀学生干部-标兵级（排名：1st/203）
   time: 2016.11
 
 - honor:
