Update style of honors

--- a/_data/honors.yml
+++ b/_data/honors.yml
@@ -3,11 +3,11 @@
   time: 2017.04
 
 - honor:
-  name: 国家奖学金（排名：1st/203）
+  name: <b>国家奖学金</b>（排名：<b>1st/203</b>）
   time: 2016.11
 
 - honor:
-  name: 校一等奖学金、校优秀学生干部-标兵级（排名：1st/203）
+  name: 校一等奖学金、校优秀学生干部-标兵级（排名：<b>1st/203</b>）
   time: 2016.11
 
 - honor:
@@ -19,7 +19,7 @@
   time: 2016.03
 
 - honor:
-  name: 校一等奖学金、校三好学生（排名：2nd/203）
+  name: 校一等奖学金、校三好学生（排名：<b>2nd/203</b>）
   time: 2015.11
 
 - honor:
