Update projects and skills

--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,5 +1,5 @@
 descriptions:
-- skill: '英语等级: CET-6'
+- skill: '英语等级: CET-6，能无障碍流畅阅读英文学术论文、技术文档'
 - skill: '编程语言: Python, Java, C/C++, Matlab, HTML/CSS/Javascript'
 - skill: '数据挖掘: 了解 NumPy, Pandas, scikit-learn, XGBoost, LightGBM 等常用数据挖掘算法库'
 
