Update honors and skills

--- a/_data/honors.yml
+++ b/_data/honors.yml
@@ -1,4 +1,12 @@
 - honor:
+  name: Kaggle - Toxic Comment Classification Challenge 铜牌
+  time: 2018.03
+
+- honor:
+  name: 第二届智慧中国杯“精品旅游服务成单预测”优胜奖
+  time: 2018.02
+
+- honor:
   name: 武汉理工大学优秀本科毕业生
   time: 2017.04
 
