Add a new honor

--- a/_data/honors.yml
+++ b/_data/honors.yml
@@ -1,4 +1,8 @@
 - honor:
+  name: Kaggle - TalkingData AdTracking Fraud Detection Challenge 银牌
+  time: 2018.05
+
+- honor:
   name: Kaggle - Toxic Comment Classification Challenge 铜牌
   time: 2018.03
 
