--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ github: ShawnyXiao
 # Update all the sections by editing the files inside _data folder.
 
 # Tracker
-analytics: UA-83979019-1
+# analytics: UA-83979019-1
 
 # Build settings
 encoding: "utf-8"
