--- a/_data/honors.yml
+++ b/_data/honors.yml
@@ -1,4 +1,8 @@
 - honor:
+  name: “达观杯”文本智能处理挑战赛<b>冠军</b>（排名：<b>1st/3216</b>）
+  time: 2018.09
+
+- honor:
   name: Kaggle - TalkingData AdTracking Fraud Detection Challenge 银牌
   time: 2018.05
 
