--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,7 +1,15 @@
 - project:
+  title: 达观杯-<a target="_blank" href="http://www.dcjingsai.com/common/cmpt/%E2%80%9C%E8%BE%BE%E8%A7%82%E6%9D%AF%E2%80%9D%E6%96%87%E6%9C%AC%E6%99%BA%E8%83%BD%E5%A4%84%E7%90%86%E6%8C%91%E6%88%98%E8%B5%9B_%E7%AB%9E%E8%B5%9B%E4%BF%A1%E6%81%AF.html">文本智能处理挑战赛</a>
+  time: 2018.07 - 2018.09
+  intro: 达观数据于 DataCastle 平台举办。希望对于给定匿名化的长文本的字和词的序列数据，预测其类别。评价指标使用的是 Macro-F1。
+  descriptions:
+  - description: 在团队中负责子模型提分（提取特征、模型结构创新）、模型融合（Stacking 和 Blending 的集成策略）与最终的答辩展示
+  - description: 团队最终分数 0.8047，<b>冠军（1st/3216）</b>
+  - description: 赛后于 Github 开源解决方案，目前已获得 <b>44 stars</b>【<a target="_blank" href="https://github.com/ShawnyXiao/2018-DC-DataGrand-TextIntelProcess">解决方案</a>】
+- project:
   title: Kaggle - <a target="_blank" href="https://www.kaggle.com/c/talkingdata-adtracking-fraud-detection">TalkingData AdTracking Fraud Detection Challenge</a>
-  time: 2018.04 - 2018.05
-  intro: TalkingData 于 Kaggle 平台举办。希望利用用户和 App 广告的基础数据和用户的点击数据，预测本次点击是否是虚假流量，即：用户在本次点击后是否会下载该 App。
+  time: 2018.03 - 2018.05
+  intro: TalkingData 于 Kaggle 平台举办。希望利用用户和 App 广告的基础数据和用户的点击数据，预测本次点击是否是虚假流量，即：用户在本次点击后是否会下载该 App。评价指标使用的是 AUC。
   descriptions:
   - description: 仅耗时 6 天且非全脱产，全程 solo
   - description: 提供的数据大约 10 G，有超过 1 亿个样本，亿级数据的处理和特征构建
@@ -10,7 +18,7 @@
 - project:
   title: 智慧中国杯-<a target="_blank" href="http://www.dcjingsai.com/common/cmpt/%E7%B2%BE%E5%93%81%E6%97%85%E8%A1%8C%E6%9C%8D%E5%8A%A1%E6%88%90%E5%8D%95%E9%A2%84%E6%B5%8B_%E7%AB%9E%E8%B5%9B%E4%BF%A1%E6%81%AF.html">精品旅行服务成单预测</a>
   time: 2018.01 - 2018.02
-  intro: 工业和信息化部联合皇包车举办。希望利用用户的信息数据和在 APP 中的行为数据，预测用户是否会在短期内购买精品旅游服务。
+  intro: 工业和信息化部联合皇包车举办。希望利用用户的信息数据和在 APP 中的行为数据，预测用户是否会在短期内购买精品旅游服务。评价指标使用的是 AUC。
   descriptions:
   - description: 在团队中负责单模型的提分：挖掘基础特征、统计特征、交叉特征和基于序列数据的特征等，构建 LightGBM 模型
   - description: 团队最终分数 9727，排名 <b>14th/1135 (Top 1.23%)</b>
@@ -18,21 +26,21 @@
 - project:
   title: 大数据与计算智能大赛-<a target="_blank" href="http://www.datafountain.cn/#/competitions/271/intro">企业经营退出风险预测</a>
   time: 2017.10 - 2017.12
-  intro: 中国计算机学会（CCF）联合量子数聚举办。希望利用中小型企业的基础数据与行为数据，预测该企业未来两年是否因经营不善而退出市场。
+  intro: 中国计算机学会（CCF）联合量子数聚举办。希望利用中小型企业的基础数据与行为数据，预测该企业未来两年是否因经营不善而退出市场。评价指标使用的是 AUC。
   descriptions:
   - description: 在团队中负责单模型的提分：挖掘基础特征、统计特征和交叉特征等，构建 XGBoost 模型
   - description: 复赛 B 榜单模型分数在团队中最优，单模型分数 6930
   - description: 复赛 A 榜团队分数 6945，排名 <b>3rd/569</b>，B榜分数 6947，排名 <b>9th/569 (Top 1.58%)</b>
-  - description: 赛后于 Github 开源解决方案，目前已获得 <b>35 stars</b> 与 <b>23 forks</b>【<a target="_blank" href="https://github.com/ShawnyXiao/2017-CCF-BDCI-Enterprise">Github 代码</a>】
+  - description: 赛后于 Github 开源解决方案，目前已获得 <b>48 stars</b> 与 <b>34 forks</b>【<a target="_blank" href="https://github.com/ShawnyXiao/2017-CCF-BDCI-Enterprise">Github 代码</a>】
 - project:
   title: 大数据与计算智能大赛-<a target="_blank" href="http://www.datafountain.cn/#/competitions/277/intro">让 AI 当法官</a>（初赛）
   time: 2017.10 - 2017.12
-  intro: 中国计算机学会（CCF）联合明略数据举办。希望利用法律案件的案情文本，预测该案件所处的罚金额度范围（初赛）和相关法律条文（复赛）。
+  intro: 中国计算机学会（CCF）联合明略数据举办。希望利用法律案件的案情文本，预测该案件所处的罚金额度范围（初赛）和相关法律条文（复赛）。评价指标使用的是 Micro-F1。
   descriptions:
   - description: 初赛 solo，未参加复赛：对文本数据进行分词和去除停用词等预处理操作，挖掘词性特征和统计特征等，基于 stacking 构建融合模型
   - description: 比赛中只提交了 2 次，便达到分数 4503
   - description: 初赛 A 榜分数 4503，排名 <b>5th/415</b>，B榜分数 4573，排名 <b>7th/415 (Top 1.68%)</b>
-  - description: 赛后于 Github 开源解决方案，目前已获得 <b>85 stars</b> 与 <b>44 forks</b>【<a target="_blank" href="https://github.com/ShawnyXiao/2017-CCF-BDCI-AIJudge">Github 代码</a>】
+  - description: 赛后于 Github 开源解决方案，目前已获得 <b>112 stars</b> 与 <b>60 forks</b>【<a target="_blank" href="https://github.com/ShawnyXiao/2017-CCF-BDCI-AIJudge">Github 代码</a>】
 - project:
   title: <a target="_blank" href="https://github.com/ShawnyXiao/SpringBoot-MyBatis">SprintBoot-MyBatis</a>
   time: 2016.11 - 2017.03
@@ -40,7 +48,7 @@
   descriptions:
   - description: 唯一负责人：需求、研发、文档和开源
   - description: 组件高内聚低耦合，提供性能监控与资源保护，注重代码风格
-  - description: 开源后收到良好的反响，目前已获得 <b>245 stars</b> 与 <b>125 forks</b>【<a target="_blank" href="https://github.com/ShawnyXiao/SpringBoot-MyBatis">Github 代码</a>】
+  - description: 开源后收到良好的反响，目前已获得 <b>285 stars</b> 与 <b>143 forks</b>【<a target="_blank" href="https://github.com/ShawnyXiao/SpringBoot-MyBatis">Github 代码</a>】
 - project:
   title: <a target="_blank" href="http://whrt.whut.edu.cn/">武汉智慧地铁系统</a>
   time: 2016.05 - 2016.10
@@ -56,4 +64,3 @@
   - description: 核心测试人员（白盒+黑盒）：负责理解需求后编写测试用例，对研发人员的程序进行白盒和黑盒测试
   - description: 黑盒测试：使用自动化测试技术，编写测试用例脚本，实现自动化测试
   - description: 白盒测试：检查研发人员的代码，识别代码中的漏洞
-
