--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ style: styles-2
 
 # Profile information
 name: 肖小粤
-tagline: 不想搞区块链的后<br>端研发不是一个好<br>的机器学习工程师  # 少一点功利主义的追求<br>多一些不为什么的坚持
+tagline: 上进青年、完美主义者  # 少一点功利主义的追求<br>多一些不为什么的坚持
 pic: profile.png
 sex: 男
 age: 1995.09.25
