--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -5,7 +5,7 @@
   descriptions:
   - description: 在团队中负责子模型提分（提取特征、模型结构创新）、模型融合（Stacking 和 Blending 的集成策略）与最终的答辩展示
   - description: 最终成绩：分数 0.8047，<b>冠军（1st/3216）</b>
-  - description: 赛后于 GitHub 开源解决方案，目前已获得 <b>44 stars</b>【<a target="_blank" href="https://github.com/ShawnyXiao/2018-DC-DataGrand-TextIntelProcess">解决方案</a>】
+  - description: 赛后于 GitHub 开源解决方案，目前已获得 <b>60 stars</b> 与 <b>11 forks</b>【<a target="_blank" href="https://github.com/ShawnyXiao/2018-DC-DataGrand-TextIntelProcess">解决方案</a>】
 - project:
   title: 腾讯广告算法大赛-<a target="_blank" href="http://algo.tpai.qq.com/home/home/index.html">相似人群拓展</a>（初赛）
   time: 2018.04 - 2018.05
@@ -36,7 +36,7 @@
   intro: 工业和信息化部联合皇包车举办。希望利用用户的信息数据和在 APP 中的行为数据，预测用户是否会在短期内购买精品旅游服务。评价指标使用的是 AUC。
   descriptions:
   - description: 在团队中负责单模型的提分：挖掘基础特征、统计特征、交叉特征和基于序列数据的特征等，构建 LightGBM 模型
-  - description: 最终成绩：分数 9727，排名 <b>14th/1135 (Top 1.23%)</b>
+  - description: 最终成绩：分数 0.9727，<b>优胜奖</b>
   - description: 赛后于 GitHub 开源解决方案【<a target="_blank" href="https://github.com/ShawnyXiao/2018-ICC-TravelService">GitHub 代码</a>】
 - project:
   title: 大数据与计算智能大赛-<a target="_blank" href="http://www.datafountain.cn/#/competitions/271/intro">企业经营退出风险预测</a>
@@ -45,17 +45,17 @@
   descriptions:
   - description: 在团队中负责单模型的提分：挖掘基础特征、统计特征和交叉特征等，构建 XGBoost 模型
   - description: 复赛 B 榜单模型分数在团队中最优，单模型分数 0.6930
-  - description: 最终成绩：A 榜分数 0.6945，排名 <b>3rd/569</b>，B榜分数 0.6947，排名 <b>9th/569 (Top 1.58%)</b>
-  - description: 赛后于 GitHub 开源解决方案，目前已获得 <b>48 stars</b> 与 <b>34 forks</b>【<a target="_blank" href="https://github.com/ShawnyXiao/2017-CCF-BDCI-Enterprise">GitHub 代码</a>】
+  - description: 最终成绩：A 榜分数 0.6945，排名 <b>3rd/569</b>，B 榜分数 0.6947，排名 <b>9th/569 (Top 1.58%)</b>
+  - description: 赛后于 GitHub 开源解决方案，目前已获得 <b>51 stars</b> 与 <b>36 forks</b>【<a target="_blank" href="https://github.com/ShawnyXiao/2017-CCF-BDCI-Enterprise">GitHub 代码</a>】
 - project:
   title: 大数据与计算智能大赛-<a target="_blank" href="http://www.datafountain.cn/#/competitions/277/intro">让 AI 当法官</a>（初赛）
   time: 2017.10 - 2017.11
-  intro: 中国计算机学会（CCF）联合明略数据举办。希望利用法律案件的案情文本，预测该案件所处的罚金额度范围（初赛）和相关法律条文（复赛）。评价指标使用的是 Micro-F1。
+  intro: 中国计算机学会（CCF）联合明略数据举办。希望利用法律案件的案情文本，预测该案件所处的罚金额度范围（初赛）。评价指标使用的是 Micro-F1。
   descriptions:
   - description: 初赛 solo，未参加复赛：对文本数据进行分词和去除停用词等预处理操作，挖掘词性特征和统计特征等，基于 stacking 构建融合模型
   - description: 比赛中只提交了 2 次，便达到分数 0.4503
   - description: 初赛成绩：A 榜分数 0.4503，排名 <b>5th/415</b>，B 榜分数 0.4573，排名 <b>7th/415 (Top 1.68%)</b>
-  - description: 赛后于 GitHub 开源解决方案，目前已获得 <b>112 stars</b> 与 <b>60 forks</b>【<a target="_blank" href="https://github.com/ShawnyXiao/2017-CCF-BDCI-AIJudge">GitHub 代码</a>】
+  - description: 赛后于 GitHub 开源解决方案，目前已获得 <b>122 stars</b> 与 <b>62 forks</b>【<a target="_blank" href="https://github.com/ShawnyXiao/2017-CCF-BDCI-AIJudge">GitHub 代码</a>】
 - project:
   title: <a target="_blank" href="https://github.com/ShawnyXiao/SpringBoot-MyBatis">SprintBoot-MyBatis</a>
   time: 2016.11 - 2017.03
@@ -63,7 +63,7 @@
   descriptions:
   - description: 唯一负责人：需求、研发、文档和开源
   - description: 组件高内聚低耦合，提供性能监控与资源保护，注重代码风格
-  - description: 开源后收到良好的反响，目前已获得 <b>285 stars</b> 与 <b>143 forks</b>【<a target="_blank" href="https://github.com/ShawnyXiao/SpringBoot-MyBatis">GitHub 代码</a>】
+  - description: 开源后收到良好的反响，目前已获得 <b>291 stars</b> 与 <b>144 forks</b>【<a target="_blank" href="https://github.com/ShawnyXiao/SpringBoot-MyBatis">GitHub 代码</a>】
 - project:
   title: <a target="_blank" href="http://whrt.whut.edu.cn/">武汉智慧地铁系统</a>
   time: 2016.05 - 2016.10
