Update projects and skills

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -74,7 +74,7 @@
 - project:
   title: 安赛斯基因分析系统
   time: 2015.07 - 2015.09
-  intro: 安塞斯公司的生物信息分析平台，旨在让医学专家能更灵活精确地分析基因突变信息。
+  intro: 安赛斯公司的生物信息分析平台，旨在让医学专家能更灵活精确地分析基因突变信息。
   descriptions:
   - description: 核心测试人员（白盒+黑盒）：负责理解需求后编写测试用例，对研发人员的程序进行白盒和黑盒测试
   - description: 黑盒测试：使用自动化测试技术，编写测试用例脚本，实现自动化测试
