--- a/_data/honors.yml
+++ b/_data/honors.yml
@@ -1,4 +1,8 @@
 - honor:
+  name: CHIP 2018 - 平安医疗科技智能患者健康咨询问句匹配大赛季军
+  time: 2018.11
+
+- honor:
   name: “达观杯”文本智能处理挑战赛<b>冠军</b>（排名：<b>1st/3216</b>）
   time: 2018.09
 
