--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ style: styles-2 # 黑色-修订版2
 
 # Profile information
 name: 肖小粤
-tagline: 有上进心、完美主义者  # 少一点功利主义的追求<br>多一些不为什么的坚持
+# tagline: 有上进心、完美主义者  # 少一点功利主义的追求<br>多一些不为什么的坚持
 pic: profile.png
 sex: 男
 age: 1995.09.25
